# ml-project-template

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  commit-template.txt  compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
.github/workflows/: build_and_test.yaml  deploy_docs.yaml  format_and_linting.yaml
api/data/mnist_datamodule/: index.html
api/data/polars_datamodule/: index.html
api/deploy/app/: index.html
api/eval/: index.html
api/models/components/simple_dense_net/: index.html
api/models/mnist_module/: index.html
api/serve/: index.html
api/serve_apis/mnist_serve/: index.html
api/train/: index.html
api/utils/download_utils/: index.html
api/utils/instantiators/: index.html
api/utils/logging_utils/: index.html
api/utils/pylogger/: index.html
api/utils/rich_utils/: index.html
api/utils/utils/: index.html
configs/: eval.yaml  serve.yaml  train.yaml
configs/callbacks/: model_checkpoint.yaml
configs/hydra/: default.yaml
configs/model/: mnist.yaml
configs/serve/: mnist.yaml
docs/: index.md  mkdocs.yml
scripts/: gen_doc_stubs.py
search/: search_index.json
src/: __init__.py  eval.py  serve.py  train.py
src/data/: __init__.py  mnist_datamodule.py  polars_datamodule.py
src/data/components/: __init__.py
src/deploy/: app.py
src/models/: __init__.py  mnist_module.py
src/models/components/: __init__.py  simple_dense_net.py
src/serve_apis/: __init__.py  mnist_serve.py
src/utils/: __init__.py  download_utils.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
streamlit-dockerized/: Dockerfile  README.md  app.py
tests/: conftest.py  mock_test.py
