[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpathlib>=0.19.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "kaggle>=1.6.17",
    "lightning>=2.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.41",
    "mkdocstrings[python]>=0.26.2",
    "neptune>=1.12.0",
    "polars>=1.9.0",
    "rich>=13.9.2",
    "torchvision>=0.19.1",
    "wandb>=0.18.3",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-gen-files>=0.5.0",
    "torchtyping>=0.1.5",
]
